# image2pdf-pro

./: README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
src/: App.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: AboutDialog.tsx  ConversionOverlay.tsx  ImageDropzone.tsx  ImageGrid.tsx  RecentFiles.tsx  SidebarOptions.tsx  SuccessDialog.tsx  TitleBar.tsx
src/utils/: pdfGenerator.ts
submission/: THEMEFOREST_UPLOAD_CHECKLIST.md
submission/preview-screenshots/: descriptions.txt
