[package]
name = "image2pdf-pro"
version = "2.4.0"
description = "High-performance image to PDF layout compiler"
authors = ["Image2PDF Pro Development Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
